--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,51 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 /* Body */
-body{
-    background: linear-gradient(90deg, rgb(70, 104, 255) 0%, rgba(0,95,152,1) 100%);
-    text-align: center;
-
+body {
+  background: linear-gradient(
+    90deg,
+    rgb(70, 104, 255) 0%,
+    rgba(0, 95, 152, 1) 100%
+  );
+  text-align: center;
 }
 /* SCORES */
-.score-container{
-    display: flex;
-    margin: 2em auto;
-    max-width: 900px;
-    justify-content: space-around;
-
+.score-container {
+  display: flex;
+  margin: 2em auto;
+  max-width: 900px;
+  justify-content: space-around;
 }
-.score{
-    font-size: 4vw;
-    color: red;
-    background-color: rgb(9, 0, 59);
-    padding: 0.5em 1em;
+.score {
+  font-size: 4vw;
+  color: red;
+  background-color: rgb(9, 0, 59);
+  padding: 0.5em 1em;
 }
 /* ALL ICONS  */
-.icon{
-    max-width: 900px;
-    margin: 40px auto;
-    display: flex;
-    justify-content: space-around;
+.icon {
+  max-width: 900px;
+  margin: 40px auto;
+  display: flex;
+  justify-content: space-around;
 }
-.icon > div,.computerIcon{
-    padding: 0.5em;
-    background-color: rgba(255, 255, 255, 0.486);
-    width: 20vw;
-    max-width: 200px;
-    border-radius: 1em;
+.icon > div,
+.computerIcon {
+  padding: 0.5em;
+  background-color: rgba(255, 255, 255, 0.486);
+  width: 20vw;
+  max-width: 200px;
+  border-radius: 1em;
 }
-.computerIcon{
-    margin: 2em auto;
-    display: none;
+.computerIcon {
+  margin: 2em auto;
+  display: none;
 }
-.icon-images{
-    color: white;
-    width: 100%;
-    height: 100%;
+.icon-images {
+  color: white;
+  width: 100%;
+  height: 100%;
 }
