--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,15 @@ body {
   justify-content: space-around;
 }
 .score {
-  font-size: 4vw;
+  font-size: 7vw;
   color: red;
   background-color: rgb(9, 0, 59);
   padding: 0.5em 1em;
+}
+@media (min-width: 700px) {
+  .score {
+    font-size: 50px;
+  }
 }
 /* ALL ICONS  */
 .icon {
@@ -39,13 +44,27 @@ body {
   width: 20vw;
   max-width: 200px;
   border-radius: 1em;
+  transition: 0.3s;
+}
+.icon > div:hover,
+.computerIcon:hover {
+  transform: scale(1.1);
 }
 .computerIcon {
   margin: 2em auto;
-  display: none;
+  /* display: none; */
 }
 .icon-images {
   color: white;
   width: 100%;
   height: 100%;
+}
+
+/* GAME OVER SCREEN  */
+.middle {
+  width: min-content;
+  position: fixed;
+  top: 45%;
+  left: 45%;
+  background-color: transparent;
 }
